--- a/mufajok.html
+++ b/mufajok.html
@@ -19,7 +19,7 @@
     <a href="onlinejatekok.html">Online játékok</a>
     <a href="sikeres.html">Sikeres játékok</a>
     <a href="speedrunok.html">Speedrunok</a>
-    <a href="videojatekok.html">Videójátékok</a>
+    <a href="videojatekok.html">Offlinejátékok</a>
 </div>
 <hr>
 
@@ -138,6 +138,7 @@
             <li>
                 <h2>Kaland</h2>
                 <p>
+                    A kalandjáték egy videójáték-műfaj. Elsősorban a játékos kreativitását és logikáját veszi igénybe. Egy történetet mesél el, amelynek főszereplőjét (egyes esetekben felváltva több szereplőjét) a játékos irányítja, emiatt szokás interaktív rajzfilmnek/filmnek is nevezni. A feladat általában egy rejtély megoldása, illetve szervezkedő gonosz erők legyőzése. Jellegzetes eleme tárgyak összegyűjtése és megfelelő célra való felhasználása.
                 </p>
                 <button type="button" onclick="showMore('5', this)">Mutass többet
                 </button>
@@ -228,14 +229,15 @@
                 <button type="button" onclick="showMore('8', this)">Mutass többet
                 </button>
                 <div class="mufaj-kep" id="8">
+                    <div class="flex">
                     <img class="mufaj-kep2" src="images/RTS.JPG" alt="">
                     <img class="mufaj-kep2" src="images/RTS2.JPG" alt="">
                     <img class="mufaj-kep2" src="images/RTS3.JPG" alt="">
                     <img class="mufaj-kep2" src="images/RTS4.JPG" alt="">
                     <img class="mufaj-kep2" src="images/RTS5.JPG" alt="">
+                    </div>
                 </div>
-            </li>
-            <li>
+
                 <h2>Körökre osztott stratégia:</h2>
                 <p>
                     Például: Civilization IV
@@ -243,11 +245,13 @@
                 <button type="button" onclick="showMore('10', this)">Mutass többet
                 </button>
                 <div class="mufaj-kep" id="10">
+                    <div class="flex">
                     <img class="mufaj-kep2" src="images/valosideju.jpg" alt="">
                     <img class="mufaj-kep2" src="images/valosideju2.jpg" alt="">
                     <img class="mufaj-kep2" src="images/valosideju3.jpg" alt="">
                     <img class="mufaj-kep2" src="images/valosideju4.jpg" alt="">
                     <img class="mufaj-kep2" src="images/valosideju5.jpg" alt="">
+                    </div>
                 </div>
             </li>
         </ul>
@@ -286,7 +290,13 @@
         </p>
         <button type="button" onclick="showMore('11', this)">Mutass többet</button>
         <div class="mufaj-kep" id="11">
+            <div class="flex">
             <img class="mufaj-kep2" src="images/menedzselos.jpg" alt="">
+            <img class="mufaj-kep2" src="images/menedzselos2.jpg" alt="">
+            <img class="mufaj-kep2" src="images/menedzselos3.jpg" alt="">
+            <img class="mufaj-kep2" src="images/menedzselos4.jpg" alt="">
+            <img class="mufaj-kep2" src="images/menedzselos5.jpg" alt="">
+            </div>
         </div>
     </li>
 </ul>
@@ -315,7 +325,13 @@
                 <button type="button" onclick="showMore('12', this)">Mutass többet
                 </button>
                 <div class="mufaj-kep" id="12">
-                    <img class="mufaj-kep2" src="images/autovezetoszim.jpg" alt="">
+                    <div class="flex">
+                        <img class="mufaj-kep2" src="images/autovezetoszim.jpg" alt="">
+                        <img class="mufaj-kep2" src="images/autovezetoszim2.jpg" alt="">
+                        <img class="mufaj-kep2" src="images/autovezetoszim3.jpg" alt="">
+                        <img class="mufaj-kep2" src="images/autovezetoszim4.jpg" alt="">
+                        <img class="mufaj-kep2" src="images/autovezetoszim5.jpg" alt="">
+                    </div>
                 </div>
                 <br>
             </li>
@@ -324,7 +340,13 @@
                 <button type="button" onclick="showMore('13', this)">Mutass többet
                 </button>
                 <div class="mufaj-kep" id="13">
-                    <img class="mufaj-kep2" src="images/vasutszim.jpg" alt="">
+                    <div class="flex">
+                        <img class="mufaj-kep2" src="images/vasutszim.jpg" alt="">
+                        <img class="mufaj-kep2" src="images/vasutszim2.jpg" alt="">
+                        <img class="mufaj-kep2" src="images/vasutszim3.jpg" alt="">
+                        <img class="mufaj-kep2" src="images/vasutszim4.jpg" alt="">
+                        <img class="mufaj-kep2" src="images/vasutszim5.jpg" alt="">
+                    </div>
                 </div>
             </li>
             <li>
@@ -332,17 +354,15 @@
                 <button type="button" onclick="showMore('14', this)">Mutass többet
                 </button>
                 <div class="mufaj-kep" id="14">
-                    <img class="mufaj-kep2" src="images/repuloszim.jpg" alt="">
+                    <div class="flex">
+                        <img class="mufaj-kep2" src="images/repuloszim.jpg" alt="">
+                        <img class="mufaj-kep2" src="images/repuloszim2.jpg" alt="">
+                        <img class="mufaj-kep2" src="images/repuloszim3.jpg" alt="">
+                        <img class="mufaj-kep2" src="images/repuloszim4.jpg" alt="">
+                        <img class="mufaj-kep2" src="images/repuloszim5.jpg" alt="">
+                    </div>
                 </div>
 
-            </li>
-            <li>
-                <h2>Tengeralattjáró-szimulátorok</h2>
-                <button type="button" onclick="showMore('15', this)">Mutass többet
-                </button>
-                <div class="mufaj-kep" id="15">
-                    <img class="mufaj-kep2" src="images/tengeralattjarao.jpg" alt="">
-                </div>
             </li>
         </ul>
     </li>
@@ -353,21 +373,26 @@
         <h2>Sport</h2>
         <button type="button" onclick="showMore('16', this)">Mutass többet</button>
         <div class="mufaj-kep" id="16">
-            <img class="mufaj-kep2" src="images/sportjatek.jpg" alt="">
-        </div>
-    </li>
-    <li>
-        <h2>Lexikális tudás alapú</h2>
-        <button type="button" onclick="showMore('17', this)">Mutass többet</button>
-        <div class="mufaj-kep" id="17">
-            <img class="mufaj-kep2" src="images/honfoglalo.jpg" alt="">
+            <div class="flex">
+                <img class="mufaj-kep2" src="images/sportjatek.jpg" alt="">
+                <img class="mufaj-kep2" src="images/sportjatek2.jpg" alt="">
+                <img class="mufaj-kep2" src="images/sportjatek3.jpg" alt="">
+                <img class="mufaj-kep2" src="images/sportjatek4.jpg" alt="">
+                <img class="mufaj-kep2" src="images/sportjatek5.jpg" alt="">
+            </div>
         </div>
     </li>
     <li>
         <h2>Szerencsejáték</h2>
         <button type="button" onclick="showMore('18', this)">Mutass többet</button>
         <div class="mufaj-kep" id="18">
-            <img class="mufaj-kep2" src="images/szerencsejatek.jpg" alt="">
+            <div class="flex">
+                <img class="mufaj-kep2" src="images/szerencsejatek.jpg" alt="">
+                <img class="mufaj-kep2" src="images/szerencsejatek2.jpg" alt="">
+                <img class="mufaj-kep2" src="images/szerencsejatek3.jpg" alt="">
+                <img class="mufaj-kep2" src="images/szerencsejatek4.jpg" alt="">
+                <img class="mufaj-kep2" src="images/szerencsejatek5.jpg" alt="">
+            </div>
         </div>
     </li>
     <li>
@@ -376,7 +401,13 @@
         <br>
         <button type="button" onclick="showMore('19', this)">Mutass többet</button>
         <div class="mufaj-kep" id="19">
-            <img class="mufaj-kep2" src="images/mortalkombat.jpg" alt="">
+            <div class="flex">
+                <img class="mufaj-kep2" src="images/mortalkombat.jpg" alt="">
+                <img class="mufaj-kep2" src="images/mortalkombat2.jpg" alt="">
+                <img class="mufaj-kep2" src="images/mortalkombat3.jpg" alt="">
+                <img class="mufaj-kep2" src="images/mortalkombat4.jpg" alt="">
+                <img class="mufaj-kep2" src="images/mortalkombat5.jpg" alt="">
+            </div>
         </div>
     </li>
     <li>
@@ -388,7 +419,13 @@
         </p>
         <button type="button" onclick="showMore('20', this)">Mutass többet</button>
         <div class="mufaj-kep" id="20">
-            <img class="mufaj-kep2" src="images/pummel.jpg" alt="">
+            <div class="flex">
+                <img class="mufaj-kep2" src="images/pummel.jpg" alt="">
+                <img class="mufaj-kep2" src="images/pummel2.jpg" alt="">
+                <img class="mufaj-kep2" src="images/pummel3.jpg" alt="">
+                <img class="mufaj-kep2" src="images/pummel4.jpg" alt="">
+                <img class="mufaj-kep2" src="images/pummel5.jpg" alt="">
+            </div>
         </div>
     </li>
 </ul>
