--- a/jatek_tortenet.html
+++ b/jatek_tortenet.html
@@ -16,7 +16,7 @@
     <a href="onlinejatekok.html">Online játékok</a>
     <a href="sikeres.html">Sikeres játékok</a>
     <a href="speedrunok.html">Speedrunok</a>
-    <a href="videojatekok.html">Videójátékok</a>
+    <a href="videojatekok.html">Offlinejátékok</a>
 </div>
 <hr>
 <div></div>
