--- a/onlinejatekok.html
+++ b/onlinejatekok.html
@@ -21,52 +21,52 @@
     <h1 class="sjh1 ">Pár online játszható játék</h1>
     <div class="legsikeresebbkep">
         <div class="sikerescontainer">
-        <img src="images/sso.webp" alt="Star Stable Online" title="Star Stable Online">
+        <a target="_blank" href="https://www.starstable.com/hu/register?irclickid=1XP0BgR0lxyNRpEy9e3E-XntUkAwUS06xXyD2w0&irgwc=1&affiliatename=PWNGames%20Network%20inc..&referrer=12572&AffId=3003017&pk_campaign=128&utm_source=impact&utm_medium=affiliate&utm_campaign=PWNGames%20Network%20inc..&utm_content=12572&utm_term=128"><img src="images/sso.webp" alt="Star Stable Online" title="Star Stable Online"></a>
     </div>
   </div>
     <div class="legsikeresebbkep">
         <div class="sikerescontainer">
-        <img src="images/gta5.jpg" alt="Grand Theft Auto" title="Grand Theft Auto">
+        <a target="_blank" href="https://www.rockstargames.com/gta-v"><img src="images/gta5.jpg" alt="Grand Theft Auto" title="Grand Theft Auto"></a>
     </div>
  </div>
     <div class="legsikeresebbkep">
         <div class="sikerescontainer">
-        <img src="images/genshinimpact.jpg" alt="Genshin Impact" title="Genshin Impact">
+        <a target="_blank" href="https://genshin.hoyoverse.com/en/manga"><img src="images/genshinimpact.jpg" alt="Genshin Impact" title="Genshin Impact"></a>
     </div>
 </div>
      <div class="legsikeresebbkep">
         <div class="sikerescontainer">
-        <img src="images/fortnite.jfif" alt="Fortnite" title="Fortnite">
+        <a target="_blank" href="https://www.epicgames.com/fortnite/en-US/home"><img src="images/fortnite.jfif" alt="Fortnite" title="Fortnite"></a>
     </div>
 </div>
      <div class="legsikeresebbkep">
         <div class="sikerescontainer">
-        <img src="images/pubg1.jpg" alt="PlayerUnknown’s Battlegrounds" title="PlayerUnknown’s Battlegrounds">
+        <a target="_blank" href="https://na.battlegrounds.pubg.com/"><img src="images/pubg1.jpg" alt="PlayerUnknown’s Battlegrounds" title="PlayerUnknown’s Battlegrounds"></a>
     </div> 
 </div>
     <div class="legsikeresebbkep">
         <div class="sikerescontainer">
-        <img src="images/clashroyale.jpg" alt="Clash Royale" title="Clash Royale">
+        <a target="_blank" href="https://clashroyale.com/"><img src="images/clashroyale.jpg" alt="Clash Royale" title="Clash Royale"></a>
     </div>
 </div>
      <div class="legsikeresebbkep">
         <div class="sikerescontainer">
-        <img src="images/unturned.png" alt="Unturned" title="Unturned">
+        <a target="_blank" href="https://store.steampowered.com/app/304930/Unturned/"><img src="images/unturned.png" alt="Unturned" title="Unturned"></a>
     </div>
 </div>
     <div class="legsikeresebbkep">
         <div class="sikerescontainer">
-        <img src="images/amongus.png" alt="Among us" title="Amogussy">
+        <a target="_blank" href="https://store.steampowered.com/app/945360/Among_Us/"><img src="images/amongus.png" alt="Among us" title="Amogussy"></a>
     </div>
 </div>
     <div class="legsikeresebbkep">
         <div class="sikerescontainer">
-        <img src="images/roblox.jpg" alt="Roblox" title="Roblox">
+        <a target="_blank" href="https://www.roblox.com/"><img src="images/roblox.jpg" alt="Roblox" title="Roblox"></a>
     </div>
 </div>
     <div class="legsikeresebbkep">
         <div class="sikerescontainer">
-        <img src="images/aliciaonline.jpg" alt="Alicia Online" title="Alicia Online">
+        <a target="_blank" href="https://aliciagame.com/"><img src="images/aliciaonline.jpg" alt="Alicia Online" title="Alicia Online"></a>
     </div>
 </div>
 </body>
