--- a/videojatekok.html
+++ b/videojatekok.html
@@ -22,56 +22,56 @@
         </div>
         </header>
         <hr>
-    </div>
+    <a href=""></div></a>
     <h1 class="sjh1 ">Pár offline játszható játék</h1>
         <div class="legsikeresebbkep">
             <div class="sikerescontainer">
-            <img src="images/fancade.webp" alt="Fancade" title="Fancade">
+            <a target="_blank" href="https://play.fancade.com/"><img src="images/fancade.webp" alt="Fancade" title="Fancade"></a>
         </div>
       </div>
         <div class="legsikeresebbkep">
             <div class="sikerescontainer">
-            <img src="images/rider.jpg" alt="Rider" title="Rider">
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.ketchapp.rider&hl=hu&gl=US"><img src="images/rider.jpg" alt="Rider" title="Rider"></a>
         </div>
      </div>
         <div class="legsikeresebbkep">
             <div class="sikerescontainer">
-            <img src="images/house paint.png" alt="House paint" title="House paint">
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.housepaint.game&hl=en_US&gl=US"><img src="images/house paint.png" alt="House paint" title="House paint"></a>
         </div>
     </div>
          <div class="legsikeresebbkep">
             <div class="sikerescontainer">
-            <img src="images/thewalkingzombie2.webp" alt="The Walking Zombie 2" title="The Walking Zombie 2">
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.aldagames.zombieshooter&hl=en_US&gl=US"><img src="images/thewalkingzombie2.webp" alt="The Walking Zombie 2" title="The Walking Zombie 2"></a>
         </div>
     </div>
          <div class="legsikeresebbkep">
             <div class="sikerescontainer">
-            <img src="images/earntodie.webp" alt="Earn to die" title="Earn to die">
+            <a target="_blank" target="_blank" href="https://play.google.com/store/apps/details?id=com.notdoppler.earntodie&hl=en&gl=US"><img src="images/earntodie.webp" alt="Earn to die" title="Earn to die"></a>
         </div> 
     </div>
         <div class="legsikeresebbkep">
             <div class="sikerescontainer">
-            <img src="images/stardewvalley.jpg" alt="Stardew Valley" title="Stardew Valley">
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.chucklefish.stardewvalley&hl=en&gl=US"><img src="images/stardewvalley.jpg" alt="Stardew Valley" title="Stardew Valley"></a>
         </div>
     </div>
          <div class="legsikeresebbkep">
             <div class="sikerescontainer">
-            <img src="images/pou.jpg" alt="Pou" title="Pou">
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=me.pou.app&hl=hu&gl=US"><img src="images/pou.jpg" alt="Pou" title="Pou"></a>
         </div>
     </div>
         <div class="legsikeresebbkep">
             <div class="sikerescontainer">
-            <img src="images/angrybirds.webp" alt="Angry birds" title="Angry birds">
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.rovio.angrybirds&hl=en&gl=US"><img src="images/angrybirds.webp" alt="Angry birds" title="Angry birds classic"></a>
         </div>
     </div>
         <div class="legsikeresebbkep">
             <div class="sikerescontainer">
-            <img src="images/plagueinc.webp" alt="PLague Inc." title="PLague Inc.">
+            <a target="_blank" href="https://www.ndemiccreations.com/en/22-plague-inc"><img src="images/plagueinc.webp" alt="PLague Inc." title="PLague Inc."></a>
         </div>
     </div>
         <div class="legsikeresebbkep">
             <div class="sikerescontainer">
-            <img src="images/subwaysurfers.jfif" alt="Subway Surfers" title="Subway Surfers">
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.kiloo.subwaysurf&hl=hu&gl=US"><img src="images/subwaysurfers.jfif" alt="Subway Surfers" title="Subway Surfers"></a>
         </div>
     </div>
 </body>
